# Minishell

./: CMakeLists.txt  Makefile  README.md  a.out  call_execve.c  env_utils.c  errors.c  execute_builtins.c  execute_cmd.c  execute_shell.c  f2  f4  free.c  history.c  init.c  init_cmd.c  init_structs.c  lexer.c  lexer.h  list.c  ls  ls.c  main.c  mini_utils.c  minishell  minishell.h  oualid.c  parsing.c  parsing_utils.c  print.c  readline.c  shlvl.c  sig_handler.c  struct.c  struct2.c  struct_amal.h  termcap.c  test.c  test2.c  todo  (+2 more)
,/: dollar.c  parsing.c  push_to_struct.c
Replay/: Makefile  a.out  change_to_sp.c  divid_function.c  dollar.c  f_norm.txt  free.c  main.c  minishell  parsing.c  parsing.h  pipe_semi.c  push_to_struct.c  redirection.c  search_replace.c  sh_dollar.sh  splited.c  struct.c  struct2.c  switch_new_line.c  symbols.c  symbols2.c  test.c
Replay/error/: error.c
Replay/libft/: a.out  ft_split.c  ft_strchr.c
Replay/minishell.dSYM/Contents/Resources/DWARF/: minishell
Replay/norm_back/: divid_function.c  push_to_struct.c
Replay/nrm_back/: parsing.c  push_to_struct.c  switch_new_line.c  symbols.c
backup/: minishell  splited.c  struct.c  struct2.c  switch_new_line.c  symbols.c
backup/Replay/: Makefile  a.out  main.c  splited.c  struct.c
backup/error/: error.c
builtins/: echo_utils.c  execute_cd.c  execute_echo.c  execute_env.c  execute_exit.c  execute_export.c  execute_pwd.c  execute_unset.c  mod_old_pwd.c
errors/: errors.c  exec_errors.c
gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: lexer.h
kamal/: Makefile  main.c
lexer/: Makefile
lexer/includes/: lexer.h
lexer/src/: lets_parser.c  lexer.c
lexer/src/libft/: get_next_line.c
libft/: Makefile  ft_atoi.c  ft_substr.c  get_next_line.c  libft.h
minishell.dSYM/Contents/Resources/DWARF/: minishell
old minishell/: Makefile
old minishell/includes/: lexer.h
old minishell/src/: lets_parser.c  lexer.c
old minishell/test_cmds/: 9lawi.c  Makefile  quote.c
parsing/: Makefile  divid_function.c  dollar.c  dollar_utils.c  dollar_utils2.c  error.c  free.c  ft_split.c  get_next_line.c  libft.c  minishell  parsing.c  parsing.h  pipe_semi.c  push_to_struct.c  redirection.c  search_replace.c  struct.c  switch_new_line.c  symbols.c
parsing/libft/: Makefile  ft_split.c  ft_strtrim.c
redirections/: create_files.c  redir.c
replay_backup/Replay/: parsing.h  splited.c  symbols.c
replay_backup/Replay/error/: error.c
replay_backup/Replay/libft/: Makefile  ft_split.c  libft.h
src/: error.c  lets_parser.c  lexer.c  line.c  main.c  quotes.c  struct.c
struct_amal/: a.out  main.c  struct_amal.h
struct_amal/libft/: ft_split2.c  libft.h.gch
test/: CMakeLists.txt  Makefile  a.out  clear  execve.c  execve_test.c  get_next_line.c  list.c  parsing.h  pipe_red.c  redirection.c  test.c  todo  zsh
test_cmd/: hamid
test_cmds/: 9lawi.c  a.out  quote.c  semi.c  str.c  test.c  word.c
test_cmds/libft/: libft.h
utils/: env_utils.c  env_utils2.c  execute_shell_utils.c  list_utils.c  list_utils2.c  list_utils3.c  utils.c  utils2.c  utils3.c  utils4.c
